[package]
name = "envoy-dynamic-module-jq"
version = "0.1.0"
edition = "2021"

[lib]
name = "envoy_dynamic_module_jq"
crate-type = ["cdylib"]

[dependencies]
envoy-proxy-dynamic-modules-rust-sdk = { git = "https://github.com/envoyproxy/envoy", rev = "6d9bb7d9a85d616b220d1f8fe67b61f82bbdb8d3" }
jaq-core = "2.2.1"
jaq-std = "2.1.2"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
