load("@envoy//bazel:envoy_build_system.bzl", "envoy_cc_binary")
load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

licenses(["notice"])  # Apache 2

package(default_visibility = ["//visibility:public"])

# Custom Envoy binary with the sample filter statically linked
envoy_cc_binary(
    name = "envoy",
    repository = "@envoy",
    deps = [
        "//factory:factory_lib",
        "@envoy//source/exe:envoy_main_entry_lib",
    ],
)

filegroup(
    name = "files",
    srcs = glob(
        ["**/*"],
        exclude = [
            "**/*~",
            "**/.*",
            ".*/**/*",
            "BUILD.bazel",
            "README.md",
        ],
    ),
)

pkg_tar(
    name = "includes",
    srcs = [":files"],
    package_dir = "_include/http-filter-cc",
    visibility = ["//visibility:public"],
)
