module(
    name = "envoy_example_http_filter_cc",
    version = "0.1.0-dev",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "envoy", version = "1.36.4-dev")
bazel_dep(name = "envoy_api", version = "1.36.4-dev")
bazel_dep(name = "googleapis", version = "0.0.0-20251003-2193a2bf")
bazel_dep(name = "googleurl", version = "0.0.0-221103-dd4080f.envoy")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4.envoy", repo_name = "com_google_protobuf")
bazel_dep(name = "protoc-gen-validate", version = "1.3.0.envoy", repo_name = "com_envoyproxy_protoc_gen_validate")
bazel_dep(name = "proxy-wasm-cpp-host", version = "0.0.0-260115-beb8a4e.envoy")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "toolchains_llvm", version = "1.6.0.envoy", dev_dependency = True)
bazel_dep(name = "zipkin-api", version = "1.0.0.envoy")

git_override(
    module_name = "envoy",
    commit = "e1d1bcc84e310bc35d46bb2d78297159fc4f3e9f",
    remote = "https://github.com/envoyproxy/envoy",
)

git_override(
    module_name = "envoy_api",
    commit = "e1d1bcc84e310bc35d46bb2d78297159fc4f3e9f",
    remote = "https://github.com/envoyproxy/envoy",
    strip_prefix = "api",
)

# needed to resolve conflict grpc <> flatbuffers
single_version_override(
    module_name = "rules_swift",
    version = "2.4.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)
use_repo(
    python,
    "python_3_12",
    python = "python_versions",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.24.6",
)
use_repo(
    go_sdk,
    "go_toolchains",
    "io_bazel_rules_nogo",
)
register_toolchains("@go_toolchains//:all")

envoy_toolchains_ext = use_extension("@envoy//bazel:extensions.bzl", "envoy_toolchains_extension")
use_repo(envoy_toolchains_ext, "clang_platform")
