load("@envoy//bazel:envoy_build_system.bzl", "envoy_cc_library")

licenses(["notice"])  # Apache 2

package(default_visibility = ["//visibility:public"])

envoy_cc_library(
    name = "factory_lib",
    srcs = ["factory.cc"],
    repository = "@envoy",
    deps = [
        "//api:pkg_cc_proto",
        "//common:config_lib",
        "//filter:filter_lib",
        "@envoy//envoy/registry",
        "@envoy//source/extensions/filters/http/common:factory_base_lib",
    ],
    alwayslink = 1,
)
